Fix: Support Alias Fields in MIN, MAX, FIRST, LAST, and TAKE Aggregations (#4621)
(cherry picked from commit c6a3a70ac0d0e3ae3aa5eaefba88dab000bc70d5)
Signed-off-by: Kai Huang <ahkcs@amazon.com>